TimeAdministrator/cluster/identity-svc/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  namespace: adtd
  labels:
    run: identity-svc
spec:
  ports:
  - port: 6001
    protocol: TCP
  selector:
    run: identity-svc
