TimeAdministrator/cluster/identity-svc/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-api-ingress
  namespace: adtd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /v1/account
spec:
  tls:
    - hosts:
      - adtd.westeurope.cloudapp.azure.com
      secretName: adtd-api-tls
  rules:
  - host: adtd.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /v1/account/
        backend:
          serviceName: identity-svc
          servicePort: 6001
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-redirections-ingress
  namespace: adtd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - adtd.westeurope.cloudapp.azure.com
      secretName: adtd-api-tls
  rules:
  - host: adtd.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /signin-aad
        backend:
          serviceName: identity-svc
          servicePort: 6001
      - path: /signout-aad
        backend:
          serviceName: identity-svc
          servicePort: 6001
      - path: /signout-callback-aad
        backend:
          serviceName: identity-svc
          servicePort: 6001
